# intrapro_erp_distribution

./: README.md  pyproject.toml
intrapro_erp_distribution/: hooks.py  modules.txt
intrapro_erp_distribution/intrapro_erp_distribution/custom/: customer.json  delivery_note.json  delivery_note_item.json  packed_item.json  pos_profile.json  sales_order.json  sales_order_item.json
intrapro_erp_distribution/intrapro_erp_distribution/doctype/bons_de_livraison_transferts/: bons_de_livraison_transferts.json
intrapro_erp_distribution/intrapro_erp_distribution/doctype/communes/: communes.js  communes.json  communes.py  test_communes.py
intrapro_erp_distribution/intrapro_erp_distribution/doctype/transferts_marchandise/: transferts_marchandise.json  transferts_marchandise.py
intrapro_erp_distribution/intrapro_erp_distribution/doctype/wilayas/: test_wilayas.py  wilayas.js  wilayas.json  wilayas.py
